@@ -1,0 +1,8 @@
+<?xml version="1.0" encoding="utf-8"?>  
+<TextView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@android:id/text1"
+    android:layout_width="fill_parent"
+    android:layout_height="wrap_content"
+    android:textAppearance="?android:attr/textAppearanceLarge"
+    android:padding="5dip"
+/> 
