@@ -15,8 +15,9 @@
     <string name="preferences_category_sound">Sound settings</string>
     <string name="preferences_category_files">Playlist settings</string>
     <string name="preferences_category_format">Format settings</string>
-    <string name="changelog_text">- Add stereo mixing settings\n</string>
-    <string name="changelog_title">New in version 1.0.1</string>
+    <string name="changelog_text">- Add stereo mixing settings\n
+- Add menu entry to list supported formats</string>
+    <string name="changelog_title">New in version 1.1</string>
     <string name="menu_formats">List formats</string>
     <string name="preferences_pan_separation_dialog">Set the pan separation for the channel mixer:</string>
     <string name="menu_refresh">Rescan</string>
