@@ -10,6 +10,7 @@ Stable versions
 	- add QVGA support to Android application
 	- add volume boost option to Android application preferences
 	- add stereo and panning options to Android application preferences
+	- add list of supported formats to Android application menu
 	- code cleanup
 
 3.2.0 (20100530):
